# papi-sdk-python

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: lint.yml  main.yml  publish.yml
examples/: async_dump.py  async_zstd_dump.py  booking_finish.py  dump.py  full_booking_process.py  search_hotelpage.py  zstd_dump.py
papi_sdk/: __init__.py  __version__.py  api_v3.py
papi_sdk/endpoints/: endpoints.py
papi_sdk/examples/: booking_form.py  full_booking_process.py  search_by_region.py
papi_sdk/exceptions/: base.py
papi_sdk/models/: base.py  hotel_info.py  hotel_info_dump.py  init_partners.py  order_booking_finish_status.py  order_booking_form.py  overview.py
papi_sdk/models/order_booking_finish/: affiliate.py  b2b.py  base.py
papi_sdk/models/order_info/: affiliate.py  b2b.py  base.py
papi_sdk/models/search/: base_affiliate_response.py  base_b2b_response.py  base_request.py
papi_sdk/models/search/hotelpage/: affiliate.py  b2b.py
papi_sdk/models/search/hotels/: affiliate.py  b2b.py
papi_sdk/tests/: test_affiliate_order_info.py  test_b2b_order_info.py  test_base.py  test_booking_finish_status.py  test_hotel_info.py  test_hotel_info_dump.py  test_init_partners.py  test_order_booking_finish.py  test_order_booking_form.py  test_overview.py  test_search_hotel_page.py  test_search_hotels.py  test_search_region.py
papi_sdk/tests/mocked_data/: affiliate_order_info.py  b2b_order_info.py  booking_order_finish.py  hotel_info.py  hotel_info_dump.py  init_partners.py  order_booking_finish_status.py  order_booking_form.py  overview.py  search_hotel_page.py  search_hotels.py  search_region.py
(+2 files in other folders)
