[tool.poetry]
name = "papi-sdk"
version = "0.0.2"
description = "pAPI SDK is a Python SDK for ETG APIv3"
authors = ["Stanislav Losev <stanislav.losev@ostrovok.ru>", "Ivan Elfimov <ivan.elfimov@ostrovok.ru>"]
packages = [
    {include = "papi_sdk"}
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
tox = "^3.20.1"
black = "^20.8b1"
isort = "^5.6.4"
autoflake = "^1.4"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
