[tool.poetry]
name = "papi-sdk"
version = "1.0.1"
description = "pAPI SDK is a Python SDK for ETG APIv3"
authors = [
    "Stanislav Losev <stanislav.losev@ostrovok.ru>",
    "Ivan Elfimov <ivan.elfimov@ostrovok.ru>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ostrovok-team/papi-sdk-python"
homepage = "https://github.com/ostrovok-team/papi-sdk-python"
keywords = ["sdk"]
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
packages = [
    {include = "papi_sdk"}
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
autoflake = "^1.4"

[tool.isort]
# black compatible configuration
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
